--- a/transient-test.cabal
+++ b/transient-test.cabal
@@ -20,6 +20,7 @@ executable transient-test-exe
                      , transient
                      , transient-universe
                      , ghcjs-hplay
+                     , ghcjs-perch
                      , transformers
   default-language:    Haskell2010
 
